Add GitHub Actions workflow to build and push Docker images

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,5 +1,6 @@
 name: Build and Push Docker Images
 
+# Trigger workflow on pushes to main branch
 on:
   push:
     branches:
@@ -10,18 +11,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout your code
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # Step 2: Setup Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      # Step 3: Login to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      # Step 4: Build & push backend image
       - name: Build and push backend image
         uses: docker/build-push-action@v5
         with:
@@ -29,6 +34,7 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/pitchhaven-backend:latest
 
+      # Step 5: Build & push frontend image
       - name: Build and push frontend image
         uses: docker/build-push-action@v5
         with:
