--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -26,18 +26,18 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 4: Build & push backend image
       - name: Build and push backend image
         uses: docker/build-push-action@v5
         with:
           context: ./backend
+          file: ./backend/go.dockerfile # <-- add this line
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/pitchhaven-backend:latest
 
-      # Step 5: Build & push frontend image
       - name: Build and push frontend image
         uses: docker/build-push-action@v5
         with:
           context: ./frontend
+          file: ./frontend/frontend.dockerfile # <-- add this line
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/pitchhaven-frontend:latest
